# NekoGameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
common/aer_lib/: CMakeLists.txt
common/aer_lib/include/aer/: aer_engine.h  draw_system.h  frustum.h  gizmos_renderer.h  scene.h
common/aer_lib/include/aer/editor/: editor_tool_interface.h
common/aer_lib/include/aer/managers/: light_manager.h  manager_container.h  render_manager.h
common/aer_lib/include/aer/ui/: ui_image.h  ui_manager.h  ui_text.h
common/aer_lib/src/: aer_engine.cpp  draw_system.cpp  frustum.cpp  gizmos_renderer.cpp  scene.cpp  tag.cpp
common/aer_lib/src/editor/: editor_tool_manager.cpp
common/aer_lib/src/editor/tool/: hierarchy.cpp  inspector.cpp  logger.cpp
common/aer_lib/src/managers/: light_manager.cpp  render_manager.cpp
common/aer_lib/src/ui/: ui_image.cpp  ui_manager.cpp  ui_text.cpp
common/aer_lib/test/: test_arts.cpp  test_editor.cpp  test_engine.cpp  test_fmod.cpp  test_gizmos.cpp  test_hierarchy.cpp  test_input.cpp  test_level_design.cpp  test_lights.cpp  test_log.cpp  test_logger.cpp  test_multi.cpp  test_physx.cpp  test_renderer.cpp  test_scene.cpp  test_shaders.cpp  test_ship.cpp  test_ui.cpp
common/opengl_wrapper/: CMakeLists.txt
common/opengl_wrapper/include/gl/: font.h  framebuffer.h  gl_include.h  graphics.h  material.h  mesh.h  model.h  model_manager.h  shader.h  shape.h  texture.h
common/opengl_wrapper/src/: font.cpp  graphics.cpp  line.cpp  mesh.cpp  model.cpp  model_loader.cpp  model_manager.cpp  shader.cpp  shape.cpp  sprite.cpp  texture.cpp
common/physx_wrapper/: CMakeLists.txt
common/physx_wrapper/include/px/: collider.h  physics_callbacks.h  physics_engine.h  raycast.h  rigidbody.h
common/physx_wrapper/src/: physics_callback.cpp  physics_engine.cpp  rigidbody.cpp
common/sdl_engine/: CMakeLists.txt
common/sdl_engine/include/: sdl_wrapper_pch.h
common/sdl_engine/include/gl/: gl_window.h  gles3_window.h
common/sdl_engine/include/sdl_engine/: sdl_camera.h  sdl_engine.h  sdl_input.h
common/sdl_engine/src/: sdl_camera.cpp  sdl_engine.cpp  sdl_input.cpp  sdl_window.cpp
common/sdl_engine/src/gl/: gl_window.cpp  gles3_window.cpp
common/sdl_engine/src/vk/: vulkan_window.cpp
common/vulkan_wrapper/: CMakeLists.txt
common/vulkan_wrapper/include/vk/: graphics.h  vk_imgui.h  vk_include.h  vk_resources.h  vk_utilities.h  vulkan_wrapper_pch.h
common/vulkan_wrapper/include/vk/buffers/: buffer.h  instance_buffer.h  storage_buffer.h  storage_handle.h  uniform_buffer.h
common/vulkan_wrapper/include/vk/commands/: command_buffer.h  model_command_buffer.h  particle_command_buffer.h
common/vulkan_wrapper/include/vk/core/: logical_device.h  physical_device.h
common/vulkan_wrapper/include/vk/descriptors/: descriptor_handle.h
common/vulkan_wrapper/include/vk/framebuffers/: renderpass.h  swapchain.h
common/vulkan_wrapper/include/vk/images/: image2d.h  texture.h  texture_loader.h  texture_manager.h
common/vulkan_wrapper/include/vk/material/: diffuse_material.h  material.h  material_manager.h  particle_material.h
common/vulkan_wrapper/include/vk/models/: mesh.h  mesh_instance.h  mesh_quad.h  model_manager.h  vertex_input.h
common/vulkan_wrapper/include/vk/particle/: particle.h  particle_instance.h  particle_system.h  particles_system.h
common/vulkan_wrapper/include/vk/pipelines/: graphics_pipeline.h  material_pipeline.h  material_pipeline_container.h  pipeline.h  render_pipeline.h
common/vulkan_wrapper/include/vk/ray_tracing/: acceleration_structure.h  scratch_buffer.h
common/vulkan_wrapper/include/vk/render_stage/: viewport.h
common/vulkan_wrapper/include/vk/shaders/: binding_tables.h  shader.h  uniform.h  uniform_block.h
common/vulkan_wrapper/include/vk/subrenderers/: subrenderer_opaque.h  subrenderer_particles.h
common/vulkan_wrapper/src/: graphics.cpp  vk_error_handler.cpp  vk_imgui.cpp  vk_resources.cpp  vk_utilities.cpp
common/vulkan_wrapper/src/buffers/: buffer.cpp  instance_buffer.cpp  storage_buffer.cpp  uniform_buffer.cpp
common/vulkan_wrapper/src/commands/: command_buffer.cpp  model_command_buffer.cpp  particle_command_buffer.cpp
common/vulkan_wrapper/src/core/: instance.cpp  logical_device.cpp  physical_device.cpp
common/vulkan_wrapper/src/framebuffers/: swapchain.cpp
common/vulkan_wrapper/src/images/: image2d.cpp  texture_loader.cpp  texture_manager.cpp
common/vulkan_wrapper/src/material/: diffuse_material.cpp  material_manager.cpp  particle_material.cpp
common/vulkan_wrapper/src/models/: mesh.cpp  mesh_instance.cpp  model_loader.cpp  model_manager.cpp  vertex_input.cpp
common/vulkan_wrapper/src/particle/: particle.cpp  particle_instance.cpp  particle_system.cpp  particles_system.cpp
common/vulkan_wrapper/src/particle/emitters/: emitter_container.cpp
common/vulkan_wrapper/src/pipelines/: graphics_pipeline.cpp  material_pipeline.cpp  material_pipeline_container.cpp
common/vulkan_wrapper/src/ray_tracing/: acceleration_structure.cpp  scratch_buffer.cpp
common/vulkan_wrapper/src/render_stage/: render_stage.cpp
common/vulkan_wrapper/src/renderers/: renderer_editor.cpp
common/vulkan_wrapper/src/shaders/: binding_tables.cpp  shader.cpp  uniform.cpp  uniform_block.cpp
common/vulkan_wrapper/src/subrenderers/: subrenderer_opaque.cpp  subrenderer_particles.cpp
main/feature_dev/: CMakeLists.txt
main/feature_dev/include/dev/: dev_engine.h  feature_dev_pch.h
main/feature_dev/src/: main.cpp
main/feature_dev/src/dev/: dev_engine.cpp
main/feature_dev/src/programs/split_screen/: game_camera.cpp
main/game_editor/: CMakeLists.txt
main/game_editor/src/: main.cpp
main/raytracing_engine/: CMakeLists.txt
main/raytracing_engine/data/scenes/: TestGround.aerscene
main/raytracing_engine/include/ray/: draw_system.h  raytracing_engine.h
main/raytracing_engine/src/: draw_system.cpp  main.cpp  raytracing_engine.cpp
main/vulkan_engine/: CMakeLists.txt
main/vulkan_engine/include/: vk_draw_system.h
main/vulkan_engine/src/: vk_draw_system.cpp  vk_engine.cpp
tmp/: diffuse.basis  (+7 more)
(+170 files in other folders)
